--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,11 @@
         <version>2.9</version>
     </parent>
 
-    <groupId>com.microsoft.azure</groupId>
-    <artifactId>azure-oauth</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>azure-ad</artifactId>
+    <version>0.1</version>
 
-    <name>Azure OAuth Plugin</name>
-    <description>A Jenkins authentication plugin that delegates to Azure OAuth</description>
+    <name>Azure AD Plugin</name>
+    <description>A Jenkins authentication &amp; authorization plugin that delegates to Azure OAuth</description>
 
     <packaging>hpi</packaging>
 
@@ -39,17 +38,6 @@
             <id>repo.jenkins-ci.org</id>
             <url>http://repo.jenkins-ci.org/public/</url>
         </repository>
-
-            <repository>
-                <id>com.springsource.repository.bundles.release</id>
-                <name>SpringSource Enterprise Bundle Repository - SpringSource Bundle Releases</name>
-                <url>http://repository.springsource.com/maven/bundles/release</url>
-            </repository>
-            <repository>
-                <id>com.springsource.repository.bundles.external</id>
-                <name>SpringSource Enterprise Bundle Repository - External Bundle Releases</name>
-                <url>http://repository.springsource.com/maven/bundles/external</url>
-            </repository>
     </repositories>
 
     <pluginRepositories>
@@ -57,7 +45,6 @@
             <id>repo.jenkins-ci.org</id>
             <url>http://repo.jenkins-ci.org/public/</url>
         </pluginRepository>
-
 
     </pluginRepositories>
 
@@ -100,31 +87,6 @@
             <artifactId>json</artifactId>
             <version>20070829</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>com.microsoft.azure</groupId>-->
-            <!--<artifactId>adal4j</artifactId>-->
-            <!--<version>1.1.1</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>com.google.code.gson</groupId>-->
-            <!--<artifactId>gson</artifactId>-->
-            <!--<version>2.2.2</version>-->
-            <!--<scope>compile</scope>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>com.microsoft.azure</groupId>-->
-            <!--<artifactId>azure-client-authentication</artifactId>-->
-            <!--<version>1.0.0</version>-->
-        <!--</dependency>-->
-
-
-
-        <!--<dependency>-->
-            <!--<groupId>com.jcraft</groupId>-->
-            <!--<artifactId>jsch</artifactId>-->
-            <!--<version>0.1.54</version>-->
-        <!--</dependency>-->
-
 
         <dependency>
             <groupId>com.microsoft.azure</groupId>
@@ -132,21 +94,12 @@
             <version>${azuresdk.version}</version>
             <type>jar</type>
         </dependency>
-        <dependency>
-            <groupId>com.microsoft.azure</groupId>
-            <artifactId>azure-mgmt-compute</artifactId>
-            <version>${azuresdk.version}</version>
-        </dependency>
+
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
             <version>4.5</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>org.apache.httpcomponents</groupId>-->
-            <!--<artifactId>httpcore</artifactId>-->
-            <!--<version>4.4.3</version>-->
-        <!--</dependency>-->
 
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
@@ -160,26 +113,10 @@
             <artifactId>commons-collections4</artifactId>
             <version>4.0</version>
         </dependency>
-
-
-
-
-
-
     </dependencies>
 
     <build>
         <plugins>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                    <debug>true</debug>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
@@ -207,24 +144,6 @@
                 <configuration>
                 </configuration>
             </plugin>
-            <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-release-plugin</artifactId>-->
-                <!--<version>2.5.2</version>-->
-            <!--</plugin>-->
-            <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-failsafe-plugin</artifactId>-->
-                <!--<configuration>-->
-                    <!--<forkCount>7</forkCount>-->
-                    <!--<reuseForks>true</reuseForks>-->
-                    <!--<threadCountMethods>7</threadCountMethods>-->
-                    <!--<parallel>methods</parallel>-->
-                <!--</configuration>-->
-            <!--</plugin>-->
-
-
-
 
         </plugins>
     </build>
@@ -232,14 +151,11 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <azuresdk.version>1.0.0-beta5</azuresdk.version>
-        <azure-storage.version>4.4.0</azure-storage.version>
+        <azuresdk.version>1.1.0</azuresdk.version>
         <jackson.version>2.7.2</jackson.version>
         <jenkins.version>1.625.3</jenkins.version>
         <java.level>7</java.level>
         <findbugs.failOnError>true</findbugs.failOnError>
-        <!--<findbugs.excludeFilterFile>findbugs-exclude.xml</findbugs.excludeFilterFile>-->
         <maven.javadoc.skip>true</maven.javadoc.skip>
-        <!--<azure-credentials.version>1.2</azure-credentials.version>-->
     </properties>
 </project>
