--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,7 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.5</version>
+            <version>4.5.3</version>
         </dependency>
     </dependencies>
 
@@ -120,21 +120,20 @@
                     </execution>
                 </executions>
             </plugin>
-
             <plugin>
                 <groupId>org.jenkins-ci.tools</groupId>
                 <artifactId>maven-hpi-plugin</artifactId>
                 <configuration>
+                    <pluginFirstClassLoader>true</pluginFirstClassLoader>
                 </configuration>
             </plugin>
-
         </plugins>
     </build>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <azuresdk.version>1.1.0</azuresdk.version>
+        <azuresdk.version>1.3.0</azuresdk.version>
         <jackson.version>2.7.2</jackson.version>
         <jenkins.version>1.651.3</jenkins.version>
         <java.level>8</java.level>
